Use getFirst() of SequencedCollection