@@ -119,7 +119,7 @@ class ApplicationForLeaveStatisticsTest {
 
         final Person person = new Person("muster", "Muster", "Marlene", "muster@example.org");
         final ApplicationForLeaveStatistics statistics = new ApplicationForLeaveStatistics(person, vacationTypes);
-        statistics.addWaitingVacationDays(vacationTypes.get(0), ONE);
+        statistics.addWaitingVacationDays(vacationTypes.getFirst(), ONE);
         statistics.addWaitingVacationDays(vacationTypes.get(0), ONE);
         statistics.addWaitingVacationDays(vacationTypes.get(0), ONE);
         statistics.addWaitingVacationDays(vacationTypes.get(1), ONE);
@@ -136,7 +136,7 @@ class ApplicationForLeaveStatisticsTest {
 
         final Person person = new Person("muster", "Muster", "Marlene", "muster@example.org");
         final ApplicationForLeaveStatistics statistics = new ApplicationForLeaveStatistics(person, vacationTypes);
-        statistics.addAllowedVacationDays(vacationTypes.get(0), ONE);
+        statistics.addAllowedVacationDays(vacationTypes.getFirst(), ONE);
         statistics.addAllowedVacationDays(vacationTypes.get(0), ONE);
         statistics.addAllowedVacationDays(vacationTypes.get(0), ONE);
         statistics.addAllowedVacationDays(vacationTypes.get(1), ONE);
