@@ -129,7 +129,7 @@ class SickDaysStatisticsServiceTest {
         final Page<SickDaysDetailedStatistics> allSicknotesPage = sut.getAll(departmentHead, startDate, endDate, pageableSearchQuery);
 
         assertThat(allSicknotesPage.getContent()).hasSize(1);
-        assertThat(allSicknotesPage.getContent().get(0)).satisfies(statistics -> assertThat(statistics.getSickNotes()).isEmpty());
+        assertThat(allSicknotesPage.getContent().getFirst()).satisfies(statistics -> assertThat(statistics.getSickNotes()).isEmpty());
     }
 
     @Test
@@ -207,7 +207,7 @@ class SickDaysStatisticsServiceTest {
         final Page<SickDaysDetailedStatistics> allSicknotesPage = sut.getAll(secondStageAuthority, startDate, endDate, pageableSearchQuery);
 
         assertThat(allSicknotesPage.getContent()).hasSize(1);
-        assertThat(allSicknotesPage.getContent().get(0)).satisfies(statistics -> assertThat(statistics.getSickNotes()).isEmpty());
+        assertThat(allSicknotesPage.getContent().getFirst()).satisfies(statistics -> assertThat(statistics.getSickNotes()).isEmpty());
     }
 
     @Test
@@ -246,7 +246,7 @@ class SickDaysStatisticsServiceTest {
 
         final List<SickDaysDetailedStatistics> allSicknotes = allSicknotesPage.getContent();
         assertThat(allSicknotes).hasSize(1);
-        assertThat(allSicknotes.get(0)).satisfies(actual -> {
+        assertThat(allSicknotes.getFirst()).satisfies(actual -> {
             assertThat(actual.getPersonalNumber()).isEqualTo("Passagier1337");
             assertThat(actual.getPerson().getFirstName()).isEqualTo("Office");
             assertThat(actual.getPerson().getLastName()).isEqualTo("Person");
@@ -293,7 +293,7 @@ class SickDaysStatisticsServiceTest {
 
         final List<SickDaysDetailedStatistics> allSicknotes = allSicknotesPage.getContent();
         assertThat(allSicknotes).hasSize(1);
-        assertThat(allSicknotes.get(0)).satisfies(actual -> {
+        assertThat(allSicknotes.getFirst()).satisfies(actual -> {
             assertThat(actual.getPersonalNumber()).isEqualTo("Passagier1337");
             assertThat(actual.getPerson().getFirstName()).isEqualTo("Office");
             assertThat(actual.getPerson().getLastName()).isEqualTo("Person");
@@ -339,7 +339,7 @@ class SickDaysStatisticsServiceTest {
 
         final List<SickDaysDetailedStatistics> allSicknotes = allSicknotesPage.getContent();
         assertThat(allSicknotes).hasSize(1);
-        assertThat(allSicknotes.get(0)).satisfies(actual -> {
+        assertThat(allSicknotes.getFirst()).satisfies(actual -> {
             assertThat(actual.getPersonalNumber()).isEqualTo("Passagier1337");
             assertThat(actual.getPerson().getFirstName()).isEqualTo("Boss");
             assertThat(actual.getPerson().getLastName()).isEqualTo("Person");
@@ -386,7 +386,7 @@ class SickDaysStatisticsServiceTest {
 
         final List<SickDaysDetailedStatistics> allSicknotes = allSicknotesPage.getContent();
         assertThat(allSicknotes).hasSize(1);
-        assertThat(allSicknotes.get(0)).satisfies(actual -> {
+        assertThat(allSicknotes.getFirst()).satisfies(actual -> {
             assertThat(actual.getPersonalNumber()).isEqualTo("Passagier1337");
             assertThat(actual.getPerson().getFirstName()).isEqualTo("Boss");
             assertThat(actual.getPerson().getLastName()).isEqualTo("Person");
@@ -414,7 +414,7 @@ class SickDaysStatisticsServiceTest {
         final Page<SickDaysDetailedStatistics> allSicknotesPage = sut.getAll(boss, startDate, endDate, pageableSearchQuery);
 
         assertThat(allSicknotesPage.getContent()).hasSize(1);
-        assertThat(allSicknotesPage.getContent().get(0)).satisfies(statistics -> assertThat(statistics.getSickNotes()).isEmpty());
+        assertThat(allSicknotesPage.getContent().getFirst()).satisfies(statistics -> assertThat(statistics.getSickNotes()).isEmpty());
     }
 
     @Test
